--- a/Julia-notebooks/fixed_point.ipynb
+++ b/Julia-notebooks/fixed_point.ipynb
@@ -11554,21 +11554,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 26,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "fixed_point_collect (generic function with 3 methods)"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "function fixed_point_collect(f::Function, x0::Number, tol::Number = 64*eps(typeof(x0)), maxiter::Integer = 50)\n",
     "    x1 = f(x0)\n",
@@ -11582,6 +11569,29 @@
     "    L\n",
     "end\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For the fixed point method we know that\n",
+    "$$\n",
+    "   x_{k+1} - L \\approx \\mu (x_{k} - L)\n",
+    "$$\n",
+    "where $L$ is the limit of the fixed point sequence and $\\mu = F^\\prime(L)$.  We don't know $L$, so we don't know $\\mu$ either. But we can say that we have\n",
+    "$$\n",
+    "   x_{k+1} - L \\approx \\mu (x_{k} - L), \\text{ and }  x_{k+2} - L \\approx \\mu (x_{k} - L)\n",
+    "$$\n",
+    "Solving for $L$ and $\\mu$ gives\n",
+    "$$\n",
+    "L = \\frac{x_k x_{k+2} - (x_k)^2}{x_{k+2} - 2 x_{k+1} + x_k}\n",
+    "$$\n",
+    "and\n",
+    "$$\n",
+    "   \\mu = \\frac{x_{k+2} - x_k}{x_{k+1} - x_k}.\n",
+    "$$\n",
+    "We could use the values of $x_k, x_{k+1},$ and $x_{k+2}$  along with $L \\approx \\frac{x_k x_{k+2} - (x_k)^2}{x_{k+2} - 2 x_{k+1} + x_k}$ to possibly give a better approximation to the limit.  Generically, this is an _extrapolation_ method. The word `extrapolation` means to go beyond where data is available in an attempt to determine what lies beyond.\n"
    ]
   },
   {
