solution set to solution

--- a/handout/matrix-condition.tex
+++ b/handout/matrix-condition.tex
@@ -72,12 +72,12 @@
 
 
 Small changes in inputs can cause big changes in the output. For example, the 
-solution set to the linear equations
+solution to the linear equations
 \begin{align*}
     1000 x - 1000 y &= -1000\\
    1001 x - 1000 y &= -1000
 \end{align*}
-is \(x = 0, y = 1 \).  But the solution set to
+is \(x = 0, y = 1 \).  But the solution to
 \begin{align*}
     1000 x - 1000 y &= -1000 \\
    1001 x - 1000 y &= -900
@@ -87,7 +87,8 @@ is \(x=100,y=101\).
 
 \begin{itemize}
 
-\item  Decreasing the constant term in the second equation by 10\% from -1000 to  \(-900\), changes the solution set from \(x=0,y=1\) to 
+\item  Decreasing the constant term in the second equation by 10\% from -1000 to  \(-900\), 
+changes the solution from \(x=0,y=1\) to 
  \(x=100,y=101\). 
  
  \item It's the butterfly effect.
