experiment with typefaces

--- a/handout/matrix-condition.tex
+++ b/handout/matrix-condition.tex
@@ -8,7 +8,7 @@
 \setbeamertemplate{navigation symbols}{}
 \author[BW]{BW}
 
-
+%\usefonttheme{serif}
 \usepackage{amsmath}
 \usepackage{amsthm}
 %\usepackage{isomath}
