--- a/homework/math-304.hw9.tex
+++ b/homework/math-304.hw9.tex
@@ -170,7 +170,7 @@ Use the given code to numerically solve the equation
 \begin{equation}
 F(x) =  \frac{\left( 2 {{\ensuremath{\pi} }^{2}}\operatorname{+}2\right)  \sin{\left( \ensuremath{\pi}  x\right) }\operatorname{-}\ensuremath{\pi} }{2 {{\ensuremath{\pi} }^{2}}}  + \int_0^1 \frac{1}{2} |x - y| F(y) \, \mathrm{d} y.
 \end{equation}
-using the Simpson rule method.  Which method gives a more accurate value? 
+using the Simpson rule method.  Which method, the one based on the trapezoidal rule or the Simpson rule gives a more accurate value? 
  
  
 
